// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when props.text="text" and props.config.renderer="text" renders correctly 1`] = `
<ForwardRef(WithStyles)>
  <div
    className="branch"
  >
    <p>
      text
    </p>
  </div>
</ForwardRef(WithStyles)>
`;

exports[`when props.text="text" renders correctly 1`] = `
<ForwardRef(WithStyles)>
  <div
    className="branch"
  >
    <div>
      text
    </div>
  </div>
</ForwardRef(WithStyles)>
`;

exports[`when props={} renders correctly 1`] = `
<ForwardRef(WithStyles)>
  <div
    className="branch"
  />
</ForwardRef(WithStyles)>
`;

exports[`with props.choices and props.selectChoice renders correctly 1`] = `
<ForwardRef(WithStyles)>
  <div
    className="branch"
  />
  <div
    className="Branch-choices-1"
  >
    <ForwardRef(WithStyles)
      choiceId="value1"
    >
      <span>
        key1
      </span>
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      choiceId="value2"
    >
      <span>
        key2
      </span>
    </ForwardRef(WithStyles)>
  </div>
</ForwardRef(WithStyles)>
`;
